gitops/apps/chihiro/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chihiro
  labels:
    app.kubernetes.io/name: chihiro
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: chihiro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chihiro
    spec:
      serviceAccountName: chihiro
      containers:
        - name: chihiro
          args:
            - serve
            - --config=/config.yaml
          command:
            - /chihiro
          # Images moved to zot.rpcu.io with v0.7.0.
          image: zot.rpcu.io/public/chihiro:v0.9.0@sha256:fb7690d1b0f8eb0babda4036952c9f1119de04c1e82e71d103d21de91ad25df2
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: chihiro-config
