gitops/apps/chihiro/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chihiro-service
  labels:
    app.kubernetes.io/name: chihiro-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  loadBalancerIP: 10.250.0.19
  selector:
    app.kubernetes.io/name: chihiro
